--- a/src/components/resume.css
+++ b/src/components/resume.css
@@ -8,6 +8,7 @@
 .centeredu {
     margin-left: auto;
     margin-right: auto;
+    text-align:center;
 }
 .edupadding {
     padding-left: 18%;
